fixed overflow issue on videos and fav btn

--- a/client/src/Styles/_nasaObj.scss
+++ b/client/src/Styles/_nasaObj.scss
@@ -56,6 +56,7 @@
     transition: opacity 0.6s ease-in-out;
     border: transparent;
     width: 100%;
+    max-height: 100%;
     max-width: 560px;
     aspect-ratio: 1;
 
